Fixed a typo in civ.yml
Changed "attack" to "armor" for defense catalyst comment. (Tiny thing)
Line 51

--- a/civcraft_data/data/civ.yml
+++ b/civcraft_data/data/civ.yml
@@ -48,7 +48,7 @@ global:
    # Amount of extra attack each +1 gives to weapons
    attack_catalyst_multiplier: 1.0
 
-   # Amount of extra attack each +1 gives to armor
+   # Amount of extra armor each +1 gives to armor
    defense_catalyst_multiplier: 1.0
 
    # Casual mode, war disabled. Wonders for all. No spies.
