Soulbound and refined wood
Added Soulbound to the civ flag and settler.
Added support for the new wood types to crafting by using a shaped
recipe in addition to the shapeless recipe.

--- a/civcraft_data/data/materials.yml
+++ b/civcraft_data/data/materials.yml
@@ -297,6 +297,23 @@ materials:
                 data: -1
                 count: 9
 
+        # Checked 10/8/13
+        - id: 'mat_refined_wood2'
+          item_id: 126
+          item_data: 0
+          name: 'Refined Wood'
+          craftable: true
+          shaped: true
+          category: '<lightgreen>Tier 1 Materials'
+          ingredients:
+              - type_id: 162
+                data: -1
+                letter: 'l'
+          shape:
+              - "lll"
+              - "lll"
+              - "lll"
+
 # Replaced by diamond block
 #        - id: 'mat_refined_diamonds'
 #          item_id: 351
