Added KillCommand.java Added NoCauldronWash.java
Added NoCauldronWash component to colored leather armor.

--- a/civcraft_data/data/materials.yml
+++ b/civcraft_data/data/materials.yml
@@ -1441,6 +1441,7 @@ materials:
                 color: 'AB8618'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1468,6 +1469,7 @@ materials:
                 color: 'AB8618'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1495,6 +1497,7 @@ materials:
                 color: 'AB8618'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1522,6 +1525,7 @@ materials:
                 color: 'AB8618'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1551,6 +1555,7 @@ materials:
                 color: '339933'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1578,6 +1583,7 @@ materials:
                 color: '339933'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1605,6 +1611,7 @@ materials:
                 color: '339933'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1632,6 +1639,7 @@ materials:
                 color: '339933'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1661,6 +1669,7 @@ materials:
                 color: 'FF0000'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1688,6 +1697,7 @@ materials:
                 color: 'FF0000'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1715,6 +1725,7 @@ materials:
                 color: 'FF0000'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
@@ -1742,6 +1753,7 @@ materials:
                 color: 'FF0000'
               - name: 'NoVanillaDurability'
               - name: 'DurabilityOnDeath'
+              - name: 'NoCauldronWash'
                 value: '0.1'
           ingredients:
               - type_id: 0
