- Added Arena Support - Moved Shotbow specific functions to ShotbowCommand.java instead of the admin command.

--- a/civcraft/src/plugin.yml
+++ b/civcraft/src/plugin.yml
@@ -50,3 +50,9 @@ commands:
         aliases: [v]
     trade:
         aliases:
+    kill:
+        aliases:
+    team:
+        aliases:
+    sb:
+        aliases:
