--- a/civcraft_data/data/arena.yml
+++ b/civcraft_data/data/arena.yml
@@ -2,24 +2,129 @@
 # This yaml specifies the configurations for specific arena maps.
 #
 
+# 
+# Maximum number of players that can be in an arena team.
+#
+max_team_size: 5
+
+#
+# Amount of base ladder points to award for each match.
+base_ladder_points: 100
+
+#
+# Amount of points you need to be above an opponent to be consider slightly favored.
+slightly_favored_points: 400
+
+# Amount to adjust points based on winner. If winner is favored, this is a bonus, if 
+# loser if favored this much is taken away from the base to make the loss less harsh
+slightly_favored_modifier: 0.5
+
+# 
+# Amount of points you need to be above to be considered favored.
+favored_points: 1000
+favored_modifier: 0.2
 
 arenas:
-   - id: 'arena_test'
-     name: 'Test Arena'
-     world_folder: 'arena_test'
-     teams:
-         - number: 1
-           name: 'Team 1'
-           controlblocks:
-              - '-611,18,-763'
-              - '-598,18,-764'
-              - '-596,18,-743'
-              - '-613,18,-743'
-         - number: 2
-           name: 'Team 2'
-           controlblocks:
-              - '-598,18,-960'
-              - '-611,18,-960'
-              - '-613,18,-981'
-              - '-596,18,-981'
+    - id: 'arena_desert'
+      name: 'Desert Sands'
+      world_folder: 'arena_desert_sands'
+      control_block_hp: 10
+      teams:
+        - number: 0
+          name: 'Team 1'
+          controlblocks:
+             - '1129,7,950'
+             - '1164,7,947'
+             - '1164,7,982'
+             - '1129,7,979'
+          revivepoints:
+             - '1136,5,985'
+             - '1152,5,985'
+             - '1169,5,964'
+             - '1152,5,944'
+             - '1136,5,944'
+          respawnpoints:
+             - '1164,29,964'
+             - '1129,29,964'
+          chests:
+             - '1128,30,967'
+             - '1128,30,962'
+             - '1165,30,962'
+             - '1165,30,967'
+             - '1125,5,958'
+             - '1125,5,971'
+          respawnsign: '1146,29,963'
+        - number: 1
+          name: 'Team 2'
+          controlblocks:
+             - '986,7,950'
+             - '951,7,947'
+             - '951,7,982'
+             - '986,7,979'
+          revivepoints:
+             - '979,5,985'
+             - '963,5,985'
+             - '964,5,944'
+             - '979,5,944'
+             - '946,5,965'
+          respawnpoints:
+             - '986,29,964'
+             - '951,29,964'
+          chests:
+             - '990,5,958'
+             - '990,5,971'
+             - '950,30,962'
+             - '950,30,967'
+             - '987,30,967'
+             - '987,30,962'
+          respawnsign: '969,29,966'
+
+ 
+#   - id: 'arena_test'
+#     name: 'Test Arena'
+#     world_folder: 'arena_test'
+#     control_block_hp: 10
+#     teams:
+#         - number: 0
+#           name: 'Team 1'
+#           controlblocks:
+#              - '-612,18,-765'
+#              - '-599,18,-765'
+#              - '-597,18,-744'
+#              - '-614,18,-744'
+#           revivepoints:
+#              - '-593,16,-760'
+#              - '-601,16,-773'
+#              - '-611,16,-772'
+#              - '-617,16,-759'
+#              - '-621,16,-748'
+#              - '-607,16,-740'
+#              - '-591,16,-745'
+#              - '-593,16,-760'
+#           respawnpoints:
+#              - '-605,75,-761'
+#           chests:
+#              - '-603,74,-759'
+#              - '-613,16,-775'
+#           respawnsign: '-608,75,-764'
+#         - number: 1
+#           name: 'Team 2'
+#           controlblocks:
+#              - '-612,18,-961'
+#              - '-599,18,-961'
+#              - '-597,18,-982'
+#              - '-614,18,-982'
+#           revivepoints:
+#              - '-611,16,-955'
+#              - '-600,16,-955'
+#              - '-596,16,-968'
+#              - '-604,16,-986'
+#              - '-621,16,-979'
+#              - '-620,16,-965'
+#           respawnpoints:
+#              - '-606,75,-964'
+#           chests:
+#              - '-608,75,-967'
+#              - '-598,16,-951'
+#           respawnsign: '-603,75,-962'
 
